--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-streamlit
+streamlit>=1.28
+langchain>=0.0.217
+openai>=1.2
 sys
 pypdf
-langchain
 langchain_community
 langchain_openai
-openai
 chromadb
 tiktoken
 pysqlite3-binary
